--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@clerk/clerk-react": "^5.32.1",
+    "@clerk/themes": "^2.2.51",
     "@tailwindcss/vite": "^4.1.8",
     "motion": "^12.16.0",
     "react": "^19.1.0",
@@ -20,15 +22,12 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
-    "@types/react": "^19.1.2",
-    "@types/react-dom": "^19.1.2",
     "@vitejs/plugin-react": "^4.4.1",
     "eslint": "^9.25.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^16.0.0",
-    "vite": "^6.3.5",
-    "@types/bun": "latest"
+    "vite": "^6.3.5"
   },
   "peerDependencies": {
     "typescript": "^5"
